--- a/buddhism/index.html
+++ b/buddhism/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="css/main.css">
+<link rel="icon" href="assets/images/yinyang.jpg"/>
 <title>Buddhism</title>
 </head>
 <div class="header" id="myHeader">
